WIP: My batis set implementation

--- a/MagicApp/src/main/webapp/index.xhtml
+++ b/MagicApp/src/main/webapp/index.xhtml
@@ -8,5 +8,7 @@
     <h2>Welcome to magic app!</h2>
     <h:link value="Sets" outcome="sets.xhtml" />
     <h:link value="Cards" outcome="cards.xhtml" />
+    <br/>
+    <h:link outcome="myBatis/sets" value="MyBatis implementation Sets"/>
 </h:body>
 </html>
