--- a/MagicApp/src/main/webapp/cardDetails.xhtml
+++ b/MagicApp/src/main/webapp/cardDetails.xhtml
@@ -29,8 +29,7 @@
     <ol>
         <ui:repeat value="#{cardPrintings.allCardPrintings}" var="cardPrinting">
             <li>
-                <h:link value="#{cardPrinting.printedCardSet.name}" outcome="set?setId=#{set.id}" />
-                Set number: #{cardPrinting.setNumber}
+                #{cardPrinting.printedCardSet.name} Set number: #{cardPrinting.setNumber}
             </li>
 
         </ui:repeat>
